fix header and merchant card so the text doesnt overlap and is responsive

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,8 +10,7 @@
   }
 
   @media only screen and (min-width: $max-width-mobile-screen) {
-    min-width: $sidebar-min-width;
-    z-index: 3;
+    z-index: 4;
   }
   // TODO: add filters
   // &--Filters {
