--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -2,6 +2,7 @@
 
 .Map-Container {
   position: fixed;
+  z-index: 3;
   width: 50%;
   height: 100%;
   right: 0;
