--- a/src/components/MerchantList/MerchantList.scss
+++ b/src/components/MerchantList/MerchantList.scss
@@ -2,7 +2,7 @@
 
 .Merchant {
   &--Container {
-    z-index: 2;
+    z-index: 3;
     display: flex;
     position: relative;
     flex-direction: column;
@@ -10,7 +10,6 @@
     @media (min-width: $max-width-mobile-screen) {
       margin-top: 102px; // height of the header
       width: 50%;
-      min-width: $sidebar-min-width;
     }
     @media only screen and (max-width: $max-width-mobile-screen) {
       height: $merchant-container-height;
